# CVPRW-26

./: CODE_OF_CONDUCT.md  LICENSE  README.md
src_audio_and_fusion/: README.md  pyproject.toml  run-mlflow.sh  run-notebook.sh
src_audio_and_fusion/configs/: cfg_test_w_audio.yaml  cfg_va_s2s.yaml  mm_cfg_va_s2s.yaml  test_mm_cfg_va_s2s.yaml
src_audio_and_fusion/data/: videos_fps.csv
src_audio_and_fusion/data/labels_segmented_s2s_wav/: test_audio_segment.csv  val_audio_segment.csv
src_audio_and_fusion/scripts/: extract_audio.py  extract_audio.yaml  make_audio_windows.py  make_audio_windows.yaml  make_s2s_windows.py  make_s2s_windows.yaml  make_va_chunks.py  make_va_chunks.yaml  predictions_fusion.py  scan_fps.py  scan_fps.yaml
src_audio_and_fusion/src/: chimera_plugin.py  train.py  utils.py
src_audio_and_fusion/src/audio/data/: abaw_va_datamodule.py  abaw_va_dataset.py  abaw_va_test_datamodule.py  augmentations.py
src_audio_and_fusion/src/audio/models/: common_models.py  wavlm_s2s_model.py
src_audio_and_fusion/src/callbacks/: ema_callback.py  framewise_eval_callback.py  multimodal_framewise_callback.py  multimodal_framewise_v2_callback.py  unfreeze_audio_backbone_callback.py  windowwise_callback.py
src_audio_and_fusion/src/fusion/data/: abaw_mm_datamodule.py  abaw_mm_dataset.py  abaw_mm_test_datamodule.py  variable_length_masking_collate.py
src_audio_and_fusion/src/losses/: ccc_mse_loss.py  ccc_mse_mm_loss.py
src_audio_and_fusion/src/metrics/: va_ccc_metric.py
src_audio_and_fusion/src/optimizers/: adamw_two_group_optimizer.py
(+636 files in other folders)
